--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "gsap": "^3.11.5",
     "vue": "^3.2.13",
     "vue-writer": "^1.2.0"
   },
