--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "gsap": "^3.11.5",
     "vue": "^3.2.13",
+    "vue-router": "^4.1.6",
     "vue-writer": "^1.2.0"
   },
   "devDependencies": {
