--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "gsap": "^3.11.5",
+    "swiper": "^9.3.0",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6",
     "vue-writer": "^1.2.0"
